# play-bzlmod

./: .bazelrc  .gitignore  BUILD.bazel  MODULE.bazel  README.md  __main__.py  dot-envrc  lib.py  requirements.in  requirements_lock_3_9.txt  test.py
